--- a/website/index.html
+++ b/website/index.html
@@ -69,7 +69,7 @@
       border-radius: 50%;
       width: 18px;
       height: 18px;
-      display: none; /* HIDDEN INITIALLY */
+      display: none;
       align-items: center;
       justify-content: center;
       pointer-events: none;
@@ -78,7 +78,7 @@
     .sidebar {
       position: fixed;
       top: 0;
-      left: -100%;
+      left: 0;
       width: 250px;
       height: 100%;
       background-color: white;
@@ -86,23 +86,21 @@
       text-transform: uppercase;
       padding: 20px;
       box-shadow: 2px 0 5px rgba(0,0,0,0.1);
-      transition: left 0.3s ease, visibility 0.3s ease;
+      transform: translateX(-100%);
+      transition: transform 0.25s ease-out;
       z-index: 1000;
-      visibility: hidden;
     }
 
     .sidebar.open {
-      left: 0;
-      visibility: visible;
+      transform: translateX(0);
     }
 
-    .sidebar .close-icon {
+    .close-icon {
       position: absolute;
-      top: 50%;
+      top: 50px;
       left: 20px;
       width: 40px;
       height: 40px;
-      transform: translateY(-50%);
       cursor: pointer;
     }
 
@@ -154,12 +152,11 @@
         right: -4px;
       }
 
-      .sidebar .close-icon {
+      .close-icon {
         width: 32px;
         height: 32px;
-        top: 50%;
+        top: 40px;
         left: 16px;
-        transform: translateY(-50%);
       }
 
       .sidebar-content {
@@ -170,8 +167,10 @@
 </head>
 <body>
 
+  <!-- Background Overlay -->
   <div class="overlay" id="overlay" onclick="closeSidebar()"></div>
 
+  <!-- Header Section -->
   <div class="header">
     <!-- Menu Icon -->
     <img src="https://github.com/mattscianna/mattscianna/blob/main/MENU.png?raw=true"
@@ -196,7 +195,7 @@
 
   <!-- Sidebar -->
   <div id="sidebar" class="sidebar">
-    <!-- Close Icon (X) -->
+    <!-- Close Icon -->
     <img src="https://cdn-icons-png.flaticon.com/512/1828/1828778.png"
          alt="Close"
          class="close-icon"
@@ -211,6 +210,7 @@
     </div>
   </div>
 
+  <!-- Scripts -->
   <script>
     function toggleSidebar() {
       const sidebar = document.getElementById('sidebar');
@@ -235,7 +235,7 @@
       }
     }
 
-    // Initialize cart count to 0 (hidden)
+    // Initialize cart count
     updateCartCount(0);
   </script>
 
