--- a/website/index.html
+++ b/website/index.html
@@ -97,10 +97,11 @@
 
     .close-icon {
       position: absolute;
-      top: 50px;
+      top: 50%;
       left: 20px;
       width: 40px;
       height: 40px;
+      transform: translateY(-50%);
       cursor: pointer;
     }
 
@@ -155,8 +156,9 @@
       .close-icon {
         width: 32px;
         height: 32px;
-        top: 40px;
+        top: 50%;
         left: 16px;
+        transform: translateY(-50%);
       }
 
       .sidebar-content {
@@ -167,24 +169,19 @@
 </head>
 <body>
 
-  <!-- Background Overlay -->
   <div class="overlay" id="overlay" onclick="closeSidebar()"></div>
 
-  <!-- Header Section -->
   <div class="header">
-    <!-- Menu Icon -->
     <img src="https://github.com/mattscianna/mattscianna/blob/main/MENU.png?raw=true"
          alt="Menu Icon"
          class="menu-icon"
          onclick="toggleSidebar()" />
 
-    <!-- Logo -->
     <img src="https://github.com/mattscianna/mattscianna/blob/main/MATTSCIANNA.png?raw=true"
          alt="Matt Scianna"
          class="logo"
          onclick="location.reload()" />
 
-    <!-- Shopping Cart -->
     <div class="cart-container" title="Shopping Cart">
       <img src="https://cdn-icons-png.flaticon.com/512/263/263142.png"
            alt="Cart Icon"
@@ -193,15 +190,12 @@
     </div>
   </div>
 
-  <!-- Sidebar -->
   <div id="sidebar" class="sidebar">
-    <!-- Close Icon -->
     <img src="https://cdn-icons-png.flaticon.com/512/1828/1828778.png"
          alt="Close"
          class="close-icon"
          onclick="closeSidebar()" />
 
-    <!-- Sidebar Content -->
     <div class="sidebar-content">
       <p>Home</p>
       <p>Shop</p>
@@ -210,7 +204,6 @@
     </div>
   </div>
 
-  <!-- Scripts -->
   <script>
     function toggleSidebar() {
       const sidebar = document.getElementById('sidebar');
