--- a/website/index.html
+++ b/website/index.html
@@ -16,17 +16,26 @@
       margin: 0;
       font-family: 'Cardo', serif;
       background-color: white;
+      overflow-x: hidden;
     }
 
-    /* HEADER */
+    /* HEADER positioned absolutely on top of hero image */
     .header {
-      position: relative;
+      position: fixed; /* fixed to top so it overlaps hero image */
+      top: 10px;
+      left: 50%;
+      transform: translateX(-50%);
       height: 90px;
       display: flex;
       align-items: flex-start; /* align children to top */
       justify-content: center;
-      padding: 10px 20px; /* add space from edges and top */
+      padding: 0 20px;
       box-sizing: border-box;
+      width: 100%;
+      max-width: 1200px;
+      pointer-events: auto;
+      z-index: 1100;
+      background: transparent; /* no background */
     }
 
     .menu-icon {
@@ -36,12 +45,14 @@
       width: 40px;
       height: auto;
       cursor: pointer;
+      z-index: 1101;
     }
 
     .logo {
-      height: 40px;  /* smaller */
+      height: 40px;
       cursor: pointer;
-      margin-top: 5px; /* closer to top */
+      margin-top: 5px;
+      z-index: 1101;
     }
 
     .cart-container {
@@ -54,12 +65,14 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      z-index: 1101;
     }
 
     .cart-icon {
       font-size: 28px;
-      color: black;
+      color: white; /* changed to white for better contrast on image */
       position: relative;
+      text-shadow: 0 0 5px rgba(0,0,0,0.8);
     }
 
     .cart-count {
@@ -79,31 +92,82 @@
       min-width: 18px;
       text-align: center;
       line-height: 1.2;
+      text-shadow: 0 0 3px rgba(0,0,0,0.8);
     }
 
-    /* SIDEBAR & OVERLAY unchanged from your code, omitted here for brevity */
+    /* SIDEBAR restored to original */
+    .sidebar {
+      position: fixed;
+      top: 0;
+      left: -100%;
+      width: 250px;
+      height: 100%;
+      background-color: white;
+      font-family: 'Cardo', serif;
+      text-transform: uppercase;
+      padding: 100px 20px 20px 20px;
+      box-shadow: 2px 0 5px rgba(0,0,0,0.1);
+      transition: left 0.15s ease;
+      z-index: 1000;
+      visibility: hidden;
+    }
 
-    /* FULLSCREEN IMAGE BOX BELOW HEADER */
+    .sidebar.open {
+      left: 0;
+      visibility: visible;
+    }
+
+    .sidebar-close-container {
+      position: absolute;
+      top: 36px;
+      left: 20px;
+      width: 32px;
+      height: 32px;
+      cursor: pointer;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 1050;
+    }
+
+    .sidebar-close {
+      width: 18px;
+      height: auto;
+      display: block;
+    }
+
+    /* Overlay unchanged */
+    .overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 100%;
+      background: rgba(0,0,0,0.1);
+      display: none;
+      z-index: 999;
+    }
+
+    .overlay.show {
+      display: block;
+    }
+
+    /* FULLSCREEN IMAGE BOX - full viewport, behind header */
     .hero-image-box {
       width: 100vw;
-      height: calc(100vh - 90px); /* fill viewport below header */
+      height: 100vh;
       background: url('https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=1470&q=80') center center/cover no-repeat;
-      /* You can replace the URL above with any image you want */
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: white;
-      font-size: 2rem;
-      font-family: 'Cardo', serif;
-      text-shadow: 1px 1px 4px rgba(0,0,0,0.7);
       user-select: none;
+      position: relative;
+      z-index: 1;
     }
 
-    /* RESPONSIVE CHANGES */
+    /* RESPONSIVE */
     @media screen and (max-width: 600px) {
       .header {
         height: 70px;
-        padding: 8px 16px;
+        top: 8px;
+        padding: 0 16px;
       }
 
       .logo {
@@ -126,6 +190,17 @@
 
       .cart-icon {
         font-size: 24px;
+      }
+
+      .sidebar-close-container {
+        width: 32px;
+        height: 32px;
+        left: 16px;
+        top: 30px;
+      }
+
+      .sidebar-close {
+        width: 18px;
       }
     }
   </style>
@@ -154,10 +229,8 @@
     <p>About</p>
   </div>
 
-  <!-- Full screen hero/image box below the header -->
-  <div class="hero-image-box">
-    Welcome to Matt Scianna's site
-  </div>
+  <!-- Full screen hero/image box below -->
+  <div class="hero-image-box"></div>
 
   <script>
     function toggleSidebar() {
@@ -183,7 +256,7 @@
       }
     }
 
-    updateCartCount(0); // Start with count hidden
+    updateCartCount(0);
   </script>
 
 </body>
