--- a/website/index.html
+++ b/website/index.html
@@ -19,15 +19,14 @@
       overflow-x: hidden;
     }
 
-    /* HEADER positioned absolutely on top of hero image */
     .header {
-      position: fixed; /* fixed to top so it overlaps hero image */
+      position: fixed;
       top: 10px;
       left: 50%;
       transform: translateX(-50%);
       height: 90px;
       display: flex;
-      align-items: flex-start; /* align children to top */
+      align-items: flex-start;
       justify-content: center;
       padding: 0 20px;
       box-sizing: border-box;
@@ -35,7 +34,7 @@
       max-width: 1200px;
       pointer-events: auto;
       z-index: 1100;
-      background: transparent; /* no background */
+      background: transparent;
     }
 
     .menu-icon {
@@ -53,6 +52,7 @@
       cursor: pointer;
       margin-top: 5px;
       z-index: 1101;
+      filter: drop-shadow(0 2px 10px rgba(0, 0, 0, 0.4)); /* Aime Leon Dore–style shadow */
     }
 
     .cart-container {
@@ -70,9 +70,9 @@
 
     .cart-icon {
       font-size: 28px;
-      color: white; /* changed to white for better contrast on image */
+      color: white;
       position: relative;
-      text-shadow: 0 0 5px rgba(0,0,0,0.8);
+      filter: drop-shadow(0 2px 10px rgba(0, 0, 0, 0.4)); /* Matching soft shadow */
     }
 
     .cart-count {
@@ -95,7 +95,6 @@
       text-shadow: 0 0 3px rgba(0,0,0,0.8);
     }
 
-    /* SIDEBAR restored to original */
     .sidebar {
       position: fixed;
       top: 0;
@@ -136,7 +135,6 @@
       display: block;
     }
 
-    /* Overlay unchanged */
     .overlay {
       position: fixed;
       top: 0;
@@ -152,7 +150,6 @@
       display: block;
     }
 
-    /* FULLSCREEN IMAGE BOX - full viewport, behind header */
     .hero-image-box {
       width: 100vw;
       height: 100vh;
@@ -162,7 +159,6 @@
       z-index: 1;
     }
 
-    /* RESPONSIVE */
     @media screen and (max-width: 600px) {
       .header {
         height: 70px;
@@ -229,7 +225,6 @@
     <p>About</p>
   </div>
 
-  <!-- Full screen hero/image box below -->
   <div class="hero-image-box"></div>
 
   <script>
