--- a/website/index.html
+++ b/website/index.html
@@ -5,10 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Matt Scianna</title>
 
-  <!-- Font: Cardo -->
   <link href="https://fonts.googleapis.com/css2?family=Cardo&display=swap" rel="stylesheet">
-  
-  <!-- Font Awesome for shopping bag icon -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 
   <style>
@@ -22,28 +19,28 @@
     .header {
       position: fixed;
       top: 10px;
-      left: 50%;
-      transform: translateX(-50%);
-      height: 90px;
+      left: 0;
+      width: 100%;
       display: flex;
+      justify-content: space-between;
       align-items: flex-start;
-      justify-content: center;
       padding: 0 20px;
       box-sizing: border-box;
-      width: 100%;
-      max-width: 1200px;
-      pointer-events: auto;
       z-index: 1100;
       background: transparent;
     }
 
+    .menu-icon,
+    .logo,
+    .cart-container {
+      filter: drop-shadow(0 2px 10px rgba(0, 0, 0, 0.4));
+    }
+
     .menu-icon {
-      position: absolute;
-      left: 20px;
-      top: 10px;
       width: 40px;
       height: auto;
       cursor: pointer;
+      margin-top: 5px;
       z-index: 1101;
     }
 
@@ -52,27 +49,25 @@
       cursor: pointer;
       margin-top: 5px;
       z-index: 1101;
-      filter: drop-shadow(0 2px 10px rgba(0, 0, 0, 0.4)); /* Aime Leon Dore–style shadow */
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
     }
 
     .cart-container {
-      position: absolute;
-      right: 20px;
-      top: 10px;
-      cursor: pointer;
       width: 40px;
       height: 40px;
+      cursor: pointer;
       display: flex;
       justify-content: center;
       align-items: center;
+      margin-top: 5px;
       z-index: 1101;
     }
 
     .cart-icon {
       font-size: 28px;
       color: white;
-      position: relative;
-      filter: drop-shadow(0 2px 10px rgba(0, 0, 0, 0.4)); /* Matching soft shadow */
     }
 
     .cart-count {
@@ -160,28 +155,17 @@
     }
 
     @media screen and (max-width: 600px) {
-      .header {
-        height: 70px;
-        top: 8px;
-        padding: 0 16px;
+      .menu-icon {
+        width: 32px;
       }
 
       .logo {
         height: 30px;
-        margin-top: 3px;
-      }
-
-      .menu-icon {
-        width: 32px;
-        left: 16px;
-        top: 8px;
       }
 
       .cart-container {
         width: 32px;
         height: 32px;
-        right: 16px;
-        top: 8px;
       }
 
       .cart-icon {
@@ -198,6 +182,11 @@
       .sidebar-close {
         width: 18px;
       }
+
+      .header {
+        padding: 0 16px;
+        top: 8px;
+      }
     }
   </style>
 </head>
@@ -207,6 +196,7 @@
 
   <div class="header">
     <img src="https://github.com/mattscianna/mattscianna/blob/main/MENU-white.png?raw=true" alt="Menu Icon" class="menu-icon" onclick="toggleSidebar()" />
+    
     <img src="https://github.com/mattscianna/mattscianna/blob/main/MATTSCIANNA-white.png?raw=true" alt="Matt Scianna" class="logo" onclick="location.reload()" />
     
     <div class="cart-container" id="cart-icon">
