--- a/website/index.html
+++ b/website/index.html
@@ -7,7 +7,7 @@
 
   <!-- Font: Cardo -->
   <link href="https://fonts.googleapis.com/css2?family=Cardo&display=swap" rel="stylesheet">
-
+  
   <!-- Font Awesome for shopping bag icon -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 
@@ -37,22 +37,15 @@
       background: transparent;
     }
 
-    /* Menu icon and cart container share same size */
-    .menu-icon,
-    .cart-container {
-      width: 40px;
-      height: 40px;
-      margin-top: 5px;
-      z-index: 1101;
-      cursor: pointer;
-    }
-
     .menu-icon {
-      object-fit: contain;
-      filter:
-        drop-shadow(0 1px 1px rgba(0,0,0,0.25))
-        drop-shadow(0 2px 2px rgba(0,0,0,0.2))
-        drop-shadow(0 4px 4px rgba(0,0,0,0.1));
+      position: absolute;
+      left: 20px;
+      top: 10px;
+      width: 28px;
+      height: auto;
+      cursor: pointer;
+      z-index: 1101;
+      filter: drop-shadow(0 2px 10px rgba(255, 255, 255, 0.6)); /* White soft shadow */
     }
 
     .logo {
@@ -60,23 +53,27 @@
       cursor: pointer;
       margin-top: 5px;
       z-index: 1101;
-      filter: drop-shadow(0 2px 10px rgba(0, 0, 0, 0.4));
+      filter: drop-shadow(0 2px 10px rgba(255, 255, 255, 0.6));
     }
 
     .cart-container {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      filter: drop-shadow(0 2px 10px rgba(0, 0, 0, 0.4));
       position: absolute;
       right: 20px;
       top: 10px;
+      cursor: pointer;
+      width: 28px;
+      height: 28px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 1101;
     }
 
     .cart-icon {
-      font-size: 28px;
+      font-size: 26px;
       color: white;
       position: relative;
+      filter: drop-shadow(0 2px 10px rgba(255, 255, 255, 0.6));
     }
 
     .cart-count {
@@ -99,7 +96,69 @@
       text-shadow: 0 0 3px rgba(0,0,0,0.8);
     }
 
-    /* Sidebar and other styles unchanged ... */
+    .sidebar {
+      position: fixed;
+      top: 0;
+      left: -100%;
+      width: 250px;
+      height: 100%;
+      background-color: white;
+      font-family: 'Cardo', serif;
+      text-transform: uppercase;
+      padding: 100px 20px 20px 20px;
+      box-shadow: 2px 0 5px rgba(0,0,0,0.1);
+      transition: left 0.15s ease;
+      z-index: 1000;
+      visibility: hidden;
+    }
+
+    .sidebar.open {
+      left: 0;
+      visibility: visible;
+    }
+
+    .sidebar-close-container {
+      position: absolute;
+      top: 36px;
+      left: 20px;
+      width: 32px;
+      height: 32px;
+      cursor: pointer;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 1050;
+    }
+
+    .sidebar-close {
+      width: 18px;
+      height: auto;
+      display: block;
+    }
+
+    .overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 100%;
+      background: rgba(0,0,0,0.1);
+      display: none;
+      z-index: 999;
+    }
+
+    .overlay.show {
+      display: block;
+    }
+
+    .hero-image-box {
+      width: 100vw;
+      height: 100vh;
+      background: url('https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=1470&q=80') center center/cover no-repeat;
+      user-select: none;
+      position: relative;
+      z-index: 1;
+    }
 
     @media screen and (max-width: 600px) {
       .header {
@@ -108,26 +167,37 @@
         padding: 0 16px;
       }
 
-      .menu-icon,
-      .cart-container {
-        width: 32px;
-        height: 32px;
-      }
-
-      .menu-icon {
-        filter:
-          drop-shadow(0 1px 1px rgba(0,0,0,0.25))
-          drop-shadow(0 2px 2px rgba(0,0,0,0.2))
-          drop-shadow(0 4px 4px rgba(0,0,0,0.1));
-      }
-
       .logo {
         height: 30px;
         margin-top: 3px;
       }
 
+      .menu-icon {
+        width: 26px;
+        left: 16px;
+        top: 8px;
+      }
+
+      .cart-container {
+        width: 26px;
+        height: 26px;
+        right: 16px;
+        top: 8px;
+      }
+
       .cart-icon {
         font-size: 24px;
+      }
+
+      .sidebar-close-container {
+        width: 32px;
+        height: 32px;
+        left: 16px;
+        top: 30px;
+      }
+
+      .sidebar-close {
+        width: 18px;
       }
     }
   </style>
