--- a/website/index.html
+++ b/website/index.html
@@ -12,19 +12,21 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 
   <style>
-    body {
+    html, body {
       margin: 0;
+      padding: 0;
       font-family: 'Cardo', serif;
       background-color: white;
-      overflow-x: hidden;
+      overflow: hidden; /* Locks scrolling */
+      height: 100%;
     }
 
     .header {
       position: fixed;
-      top: 10px;
+      top: 4px;
       left: 50%;
       transform: translateX(-50%);
-      height: 90px;
+      height: 80px;
       display: flex;
       align-items: flex-start;
       justify-content: center;
@@ -32,37 +34,36 @@
       box-sizing: border-box;
       width: 100%;
       max-width: 1200px;
-      pointer-events: auto;
       z-index: 1100;
       background: transparent;
     }
 
     .menu-icon {
       position: absolute;
-      left: 20px;
-      top: 10px;
-      width: 28px;
+      left: 10px;
+      top: 8px;
+      width: 24px;
       height: auto;
       cursor: pointer;
       z-index: 1101;
-      filter: drop-shadow(0 2px 10px rgba(255, 255, 255, 0.6)); /* White soft shadow */
+      filter: drop-shadow(0 1px 2px rgba(255, 255, 255, 0.75));
     }
 
     .logo {
-      height: 40px;
+      height: 30px;
       cursor: pointer;
-      margin-top: 5px;
+      margin-top: 2px;
       z-index: 1101;
-      filter: drop-shadow(0 2px 10px rgba(255, 255, 255, 0.6));
+      filter: drop-shadow(0 2px 6px rgba(255, 255, 255, 0.6));
     }
 
     .cart-container {
       position: absolute;
-      right: 20px;
-      top: 10px;
+      right: 10px;
+      top: 8px;
       cursor: pointer;
-      width: 28px;
-      height: 28px;
+      width: 26px;
+      height: 26px;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -70,10 +71,10 @@
     }
 
     .cart-icon {
-      font-size: 26px;
+      font-size: 24px;
       color: white;
       position: relative;
-      filter: drop-shadow(0 2px 10px rgba(255, 255, 255, 0.6));
+      filter: drop-shadow(0 2px 6px rgba(255, 255, 255, 0.6));
     }
 
     .cart-count {
@@ -168,25 +169,25 @@
       }
 
       .logo {
-        height: 30px;
-        margin-top: 3px;
+        height: 26px;
+        margin-top: 2px;
       }
 
       .menu-icon {
-        width: 26px;
-        left: 16px;
-        top: 8px;
+        width: 22px;
+        left: 12px;
+        top: 10px;
       }
 
       .cart-container {
-        width: 26px;
-        height: 26px;
-        right: 16px;
-        top: 8px;
+        width: 24px;
+        height: 24px;
+        right: 12px;
+        top: 10px;
       }
 
       .cart-icon {
-        font-size: 24px;
+        font-size: 22px;
       }
 
       .sidebar-close-container {
